# OCR_document_reader

./: .gitignore  PLANS.md  README.md  egrul_result.html  pdf_to_base64.py  push_repo.bat
NLP-entity-extractor/: AGENTS.md  README.md  pyproject.toml  test_batch.py  test_inference.py  test_ner_batch.py
NLP-entity-extractor/agents/: backend.md  data-training.md  evaluation.md  ml-research.md  mlops.md  orchestrator.md
NLP-entity-extractor/docs/project/: algorithm.md  decisions.md  overview.md  requirements.md
NLP-entity-extractor/evals/: README.md
NLP-entity-extractor/experiments/: README.md
NLP-entity-extractor/scripts/: augment_data.py
NLP-entity-extractor/src/api/: README.md  app.py  schemas.py
NLP-entity-extractor/src/inference/: README.md  contracts.py  heuristics.py  loader.py  postprocess.py  predict.py  rules.py  transformer.py
NLP-entity-extractor/src/training/: README.md  dataset.py  generate_binary_data.py  labeling.py  preprocess.py  split_dataset.py  train.py  train_binary_classifier.py
NLP-entity-extractor/tasks/: backlog.md
NLP-entity-extractor/tests/: README.md
NLP-entity-extractor/tests/api/: test_app.py
NLP-entity-extractor/tests/inference/: test_heuristics.py  test_rules_and_roles.py
NLP-entity-extractor/tests/training/: test_dataset.py  test_split_dataset.py
OCR-document-parser/: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  PLANS.md  QUALITY_SCORE.md  README.md  add_worker.py  docker-compose.yml  docker-compose_dev.yml  patch_all.py  patch_minio.py  patch_redis.py  pyproject.toml  run_benchmark.bat  run_benchmark.py  run_scheduled.py  test_langfuse.py  test_rtk_batch.py  test_rtk_problems.py  verify_traces.py
OCR-document-parser/docs/design-docs/: database-schema.md  ocr-platform.md  request-processing-sequence.md  scaling-strategy.md
OCR-document-parser/docs/exec-plans/: README.md
OCR-document-parser/docs/product-specs/: ocr-court-decisions.md
OCR-document-parser/docs/references/: ocr-llms.txt
OCR-document-parser/docs/user-guide/: profiles-routing.md
OCR-document-parser/observability/: README.md  docker-compose.yml
OCR-document-parser/observability/loki/: config.yml
OCR-document-parser/observability/promtail/: config.yml
OCR-document-parser/reports/: history.csv
OCR-document-parser/scripts/: benchmark.py  langfuse_dataset.py  langfuse_prompts.py  test_court_api.py
OCR-document-parser/tests/: test_webhooks.py
(+97 files in other folders)
