[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-document-parser"
version = "0.1.0"
description = "OCR-платформа с декларативными пайплайнами для судебных и других документов (FastAPI + Postgres)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.2",
    "psycopg[binary,pool]>=3.2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pyyaml>=6.0.1",
    "mlflow>=2.14.0",
    "opencv-python-headless>=4.10.0.0",
    "numpy>=1.26.0",
    "pdfplumber>=0.11.0",
    "pypdf>=5.0.0",
    "pymupdf>=1.24.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "pika>=1.3.2",
    "docling>=2.0.0",
]

[project.scripts]
ocr-pipeline-worker = "ocr_platform.workers.pipeline_worker:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
# Профиль court_decision_ru с extractor: nlp — локальная NLP-обработка без LLM.
# Установка: pip install -e ".[nlp]" (из каталога OCR-document-parser).
nlp = [
    "transformers>=4.46,<5.0",
    "torch>=2.4,<3.0",
    "pymorphy3>=2.0,<3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

